# cursor-practice-module-8

./: .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  catalog_seed.py  config.py  constants.py  extensions.py  passwords.py
backend/app/models/: __init__.py  cart_line.py  order.py  product.py  user.py
backend/app/routes/: auth.py  cart.py  catalog.py  health.py  orders.py
backend/app/schemas/: api.py  health.py
backend/app/services/: checkout.py
backend/migrations/: env.py
backend/migrations/versions/: a922c1de5ea0_ecommerce_initial_schema.py
backend/tests/: conftest.py  test_catalog_list_query.py  test_catalog_seed.py  test_ecommerce.py  test_health.py  test_openapi.py
docker/postgres-init/: 010-sonarqube.sql
docs/: PROJECT_JOURNEY.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/helpers/: shop-api-mocks.ts
frontend/e2e/pages/: CatalogPage.ts
frontend/e2e/specs/: application.e2e.spec.ts  catalog.smoke.spec.ts  layout.mobile.e2e.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CatalogueGridSkeleton.tsx  Layout.test.tsx  Layout.tsx  PageLoadingFallback.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx  hooks.guard.test.tsx
frontend/src/lib/: api.test.ts  api.ts  format.ts  (+5 more)
(+15 files in other folders)
