[project]
name = "shopmart-backend"
version = "0.0.0"
description = "ShopMart Flask REST API"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1.3,<4",
  "Flask-SQLAlchemy>=3.1.1,<4",
  "redis>=7.4.0,<8",
  "SQLAlchemy>=2,<3",
  "psycopg[binary]>=3.3.4,<4",
  "python-dotenv>=1.2.2,<2",
  "Flask-Migrate>=4,<5",
  "flask-smorest>=0.47.0,<1",
  "marshmallow>=4.3.0,<5",
  "bcrypt>=5.0.0,<6",
  "flask-jwt-extended>=4.6,<5",
  "flask-cors>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.13,<1",
  "fakeredis>=2,<3",
  "pip-audit>=2,<6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]
